@@ -17,10 +17,6 @@ END OF INSTRUCTIONS
 
 <!-- Italian localization (it-IT): Carlo Baldassi -->
 
-<!ENTITY welcome.click "Middle click in the page to open the pie menu.">
-<!ENTITY welcome.onoff "You can turn the pie menu on/off by clicking on the blue arrow in the status bar.">
-<!ENTITY welcome.completed "easyGestures - Installation completed">
-
 <!ENTITY options "Opzioni">
 
 <!ENTITY close "Chiudi">
