@@ -17,9 +17,6 @@ Contains options dialog strings and pie menu tips.
 
 <!-- Korean localization (ko-KR): wtspout from Babelzilla.org -->
 
-<!ENTITY welcome.click "원형 메뉴를 열려면 페이지 내에서 가운데 클릭하세요.">
-<!ENTITY welcome.onoff "상태 막대 내 파란 화살표를 해 원형 메뉴를 끄고 켤 수 있습니다.">
-<!ENTITY welcome.completed "easyGestures - 설치 완료">
 <!ENTITY options "선택사항">
 <!ENTITY close "닫기">
 <!ENTITY profile "프로파일">
