@@ -1,8 +1,5 @@
 <!-- Polish localization (pl-PL): teo from Babelzilla.org -->
 
-<!ENTITY welcome.click "Middle click in the page to open the pie menu.">
-<!ENTITY welcome.onoff "You can turn the pie menu on/off by clicking on the blue arrow in the status bar.">
-<!ENTITY welcome.completed "easyGestures - Installation completed">
 <!ENTITY options "Opcje">
 <!ENTITY close "Zamknij">
 <!ENTITY profile "Profile">
