@@ -1,9 +1,5 @@
 <!-- Slovak localization (sk-SK): Hubo from Babelzilla.org -->
 
-<!ENTITY welcome.click "Middle click in the page to open the pie menu.">
-<!ENTITY welcome.onoff "You can turn the pie menu on/off by clicking on the blue arrow in the status bar.">
-<!ENTITY welcome.completed "easyGestures - Installation completed">
-
 <!ENTITY options "Možnosti">
 <!ENTITY close "Zavrieť">
 <!ENTITY profile "Profil">
