@@ -17,10 +17,6 @@ END OF INSTRUCTIONS
 
 <!-- Turkish localization (tr-TR): Ersen Yoldac from Babelzilla.org -->
 
-<!ENTITY welcome.click "Middle click in the page to open the pie menu.">
-<!ENTITY welcome.onoff "You can turn the pie menu on/off by clicking on the blue arrow in the status bar.">
-<!ENTITY welcome.completed "easyGestures - Installation completed">
-
 <!ENTITY options "Seçenekler">
 
 <!ENTITY close "Kapat">
