@@ -17,10 +17,6 @@ END OF INSTRUCTIONS
 
 <!-- Chinese localization (zh-CN): yfdyh000 from Babelzilla -->
 
-<!ENTITY welcome.click "页面点击中键打开菜单。">
-<!ENTITY welcome.onoff "你可以在状态栏点击蓝色箭头开/关圆饼菜单。">
-<!ENTITY welcome.completed "easyGestures - 安装完成">
-
 <!ENTITY options "选项">
 
 <!ENTITY close "关闭">
