@@ -17,10 +17,6 @@ END OF INSTRUCTIONS
 
 <!-- Chinese Traditional localization (zh-TW): wechuan 濰泉 -->
 
-<!ENTITY welcome.click "Middle click in the page to open the pie menu.">
-<!ENTITY welcome.onoff "You can turn the pie menu on/off by clicking on the blue arrow in the status bar.">
-<!ENTITY welcome.completed "easyGestures - Installation completed">
-
 <!ENTITY options "選項">
 
 <!ENTITY close "關閉">
