@@ -132,7 +132,6 @@
 <body >
 <div align="left"><br>
     <a name="top"></a>
-    <img src="easyGestures.png" width="174" height="59" />
 </div>
 				<table border="0" id="toc">
 						<tr id="toctitle">
